[tool.poetry]
name = "ovpn3"
version = "0.1.0"
description = "OpenVPN3 CLI"
authors = ["Janusz Skonieczny <pypi@wooyek.com>"]
license = "GNU Affero General Public License"

[tool.poetry.scripts]
ovpn3 = 'ovpn3:main'

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
click-log = "^0.3.2"
backoff = "^1.11.1"
xdg = "^5.1.1"
keyring = "^23.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
skip-string-normalization = "True"
